RESOLVED FIXED103649
[BlackBerry] Cookies in private mode should not have access to public cookies
https://bugs.webkit.org/show_bug.cgi?id=103649
Summary [BlackBerry] Cookies in private mode should not have access to public cookies
otcheung
Reported 2012-11-29 10:16:52 PST
We are changing the cookie private mode behaviour so it will not have access to public cookies
Attachments
Patch (1.71 KB, patch)
2012-11-29 10:20 PST, otcheung
no flags
Patch (2.03 KB, patch)
2012-11-29 10:37 PST, otcheung
no flags
Patch (2.01 KB, patch)
2012-11-29 10:46 PST, otcheung
no flags
otcheung
Comment 1 2012-11-29 10:20:19 PST
Rob Buis
Comment 2 2012-11-29 10:32:32 PST
Comment on attachment 176755 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=176755&action=review Otto agreed to clean it up some more. > Source/WebCore/platform/blackberry/CookieManager.cpp:512 > if (!mode) { It would be more readable to have it called privateMode instead of mode, but your patch is not related to that. > Source/WebCore/platform/blackberry/CookieManager.cpp:516 > + removeAllCookies(DoNotRemoveFromBackingStore); We always do this...
otcheung
Comment 3 2012-11-29 10:37:15 PST
otcheung
Comment 4 2012-11-29 10:46:43 PST
Rob Buis
Comment 5 2012-11-29 10:47:28 PST
Comment on attachment 176760 [details] Patch LGTM.
WebKit Review Bot
Comment 6 2012-11-29 12:16:18 PST
Comment on attachment 176760 [details] Patch Clearing flags on attachment: 176760 Committed r136148: <http://trac.webkit.org/changeset/136148>
WebKit Review Bot
Comment 7 2012-11-29 12:16:21 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.