[BlackBerry] Cookies in private mode should not have access to public cookies https://bugs.webkit.org/show_bug.cgi?id=103649

Patch by Otto Derek Cheung <otcheung@rim.com> on 2012-11-29
Reviewed by Rob Buis.

PR 253983

When CookieManager switches back from public to private mode,
we will clear the cookie tree so the browser won't have access
to the public cookies.

Tested using browser.swlab.rim.net cookie tests and the steps in
the PR.

* platform/blackberry/CookieManager.cpp:
(WebCore::CookieManager::setPrivateMode):

Canonical link: https://commits.webkit.org/121768@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136148 268f45cc-cd09-0410-ab3c-d52691b4dbfc